fix table widgets overflow issue for persona customization

--- a/openmetadata-ui/src/main/resources/ui/src/components/Customization/GenericWidget/generic-widget.less
+++ b/openmetadata-ui/src/main/resources/ui/src/components/Customization/GenericWidget/generic-widget.less
@@ -15,6 +15,8 @@
 
 .generic-widget-card {
   height: 100%;
+  overflow-y: hidden;
+  padding-bottom: 16px !important;
 
   .ant-card-head {
     background-color: @grey-100;
